Updates to the osgNav application needed to fix navigation and other issues.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14013 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/samples/OSG/simple/osgNav/remotenav/Viewer/MainWindowBase.ui
+++ b/juggler/modules/vrjuggler/samples/OSG/simple/osgNav/remotenav/Viewer/MainWindowBase.ui
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>MMA Client</string>
+        <string>Nav Control</string>
     </property>
     <hbox>
         <property name="name">
